view360/main/default/objects/V360_Diagnostic__e/V360_Diagnostic__e.object-meta.xml
<CustomObject>
    <description>Published server-side whenever a card is hidden due to a rule or configuration error (fail-closed). Subscribable signal for admins and ops; never shown to end users.</description>
    <label>V360 Diagnostic</label>
    <pluralLabel>V360 Diagnostics</pluralLabel>
</CustomObject>