view360/main/default/objects/V360_Diagnostic__e/fields/CardName__c.field-meta.xml
<CustomField>
    <fullName>CardName__c</fullName>
    <description>V360_Card__c.DeveloperName__c — human-readable identity of the card that failed closed.</description>
    <label>Card Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>