view360/main/default/objects/V360_Diagnostic__e/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>Free-text diagnostic detail (e.g. the FormulaEval exception message); optional.</description>
    <label>Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>