view360/main/default/objects/V360_Diagnostic__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Id of the anchor record being evaluated when the fail-closed decision occurred.</description>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>